azurermps/2.2.0/AzureRM.Sql/AzureRM.Sql.md
---
Module Name: AzureRM.Sql
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Locale: en-US
ms.assetid: 3EBA92B0-7FFA-44AE-9E09-97A84F41476E
updated_at: 11/11/2016 23:11 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v2.1.0/AzureRM.Sql.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v2.1.0/AzureRM.Sql.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: false
Add-AzureRmSqlDatabaseToFailoverGroup: SQL
Add-AzureRmSqlServerKeyVaultKey: SQL
Get-AzureRmSqlCapability: SQL
Get-AzureRmSqlDatabase: SQL
Get-AzureRmSqlDatabaseActivity: SQL
Get-AzureRmSqlDatabaseAdvisor: SQL
Get-AzureRmSqlDatabaseAuditingPolicy: SQL
Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy: SQL
Get-AzureRmSqlDatabaseDataMaskingPolicy: SQL
Get-AzureRmSqlDatabaseDataMaskingRule: SQL
Get-AzureRmSqlDatabaseExpanded: SQL
Get-AzureRmSqlDatabaseFailoverGroup: SQL
Get-AzureRMSqlDatabaseGeoBackup: SQL
Get-AzureRmSqlDatabaseGeoBackupPolicy: SQL
Get-AzureRmSqlDatabaseImportExportStatus: SQL
Get-AzureRmSqlDatabaseIndexRecommendations: SQL
Get-AzureRmSqlDatabaseRecommendedAction: SQL
Get-AzureRmSqlDatabaseReplicationLink: SQL
Get-AzureRmSqlDatabaseRestorePoints: SQL
Get-AzureRmSqlDatabaseSecureConnectionPolicy: SQL
Get-AzureRmSqlDatabaseThreatDetectionPolicy: SQL
Get-AzureRmSqlDatabaseTransparentDataEncryption: SQL
Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity: SQL
Get-AzureRmSqlDatabaseUpgradeHint: SQL
Get-AzureRMSqlDeletedDatabaseBackup: SQL
Get-AzureRmSqlElasticPool: SQL
Get-AzureRmSqlElasticPoolActivity: SQL
Get-AzureRmSqlElasticPoolAdvisor: SQL
Get-AzureRmSqlElasticPoolDatabase: SQL
Get-AzureRmSqlElasticPoolRecommendation: SQL
Get-AzureRmSqlElasticPoolRecommendedAction: SQL
Get-AzureRmSqlServer: SQL
Get-AzureRmSqlServerActiveDirectoryAdministrator: SQL
Get-AzureRmSqlServerAdvisor: SQL
Get-AzureRmSqlServerAuditingPolicy: SQL
Get-AzureRmSqlServerBackupLongTermRetentionVault: SQL
Get-AzureRmSqlServerCommunicationLink: SQL
Get-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity: SQL
Get-AzureRmSqlServerFirewallRule: SQL
Get-AzureRmSqlServerKeyVaultKey: SQL
Get-AzureRmSqlServerRecommendedAction: SQL
Get-AzureRmSqlServerServiceObjective: SQL
Get-AzureRmSqlServerThreatDetectionPolicy: SQL
Get-AzureRmSqlServerTransparentDataEncryptionProtector: SQL
Get-AzureRmSqlServerUpgrade: SQL
Get-AzureRmSqlServerUpgradeHint: SQL
New-AzureRmSqlDatabase: SQL
New-AzureRmSqlDatabaseCopy: SQL
New-AzureRmSqlDatabaseDataMaskingRule: SQL
New-AzureRmSqlDatabaseExport: SQL
New-AzureRmSqlDatabaseFailoverGroup: SQL
New-AzureRmSqlDatabaseImport: SQL
New-AzureRmSqlDatabaseSecondary: SQL
New-AzureRmSqlElasticPool: SQL
New-AzureRmSqlServer: SQL
New-AzureRmSqlServerCommunicationLink: SQL
New-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
New-AzureRmSqlServerFirewallRule: SQL
Remove-AzureRmSqlDatabase: SQL
Remove-AzureRmSqlDatabaseAuditing: SQL
Remove-AzureRmSqlDatabaseDataMaskingRule: SQL
Remove-AzureRmSqlDatabaseFailoverGroup: SQL
Remove-AzureRmSqlDatabaseFromFailoverGroup: SQL
Remove-AzureRmSqlDatabaseSecondary: SQL
Remove-AzureRmSqlDatabaseThreatDetectionPolicy: SQL
Remove-AzureRmSqlElasticPool: SQL
Remove-AzureRmSqlServer: SQL
Remove-AzureRmSqlServerActiveDirectoryAdministrator: SQL
Remove-AzureRmSqlServerAuditing: SQL
Remove-AzureRmSqlServerCommunicationLink: SQL
Remove-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
Remove-AzureRmSqlServerFirewallRule: SQL
Remove-AzureRmSqlServerKeyVaultKey: SQL
Remove-AzureRmSqlServerThreatDetectionPolicy: SQL
Restore-AzureRmSqlDatabase: SQL
Resume-AzureRmSqlDatabase: SQL
Set-AzureRmSqlDatabase: SQL
Set-AzureRmSqlDatabaseAdvisorAutoExecuteStatus: SQL
Set-AzureRmSqlDatabaseAuditingPolicy: SQL
Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy: SQL
Set-AzureRmSqlDatabaseDataMaskingPolicy: SQL
Set-AzureRmSqlDatabaseDataMaskingRule: SQL
Set-AzureRmSqlDatabaseFailoverGroup: SQL
Set-AzureRmSqlDatabaseGeoBackupPolicy: SQL
Set-AzureRmSqlDatabaseRecommendedActionState: SQL
Set-AzureRmSqlDatabaseSecondary: SQL
Set-AzureRmSqlDatabaseThreatDetectionPolicy: SQL
Set-AzureRmSqlDatabaseTransparentDataEncryption: SQL
Set-AzureRmSqlElasticPool: SQL
Set-AzureRmSqlElasticPoolAdvisorAutoExecuteStatus: SQL
Set-AzureRmSqlElasticPoolRecommendedActionState: SQL
Set-AzureRmSqlServer: SQL
Set-AzureRmSqlServerActiveDirectoryAdministrator: SQL
Set-AzureRmSqlServerAdvisorAutoExecuteStatus: SQL
Set-AzureRmSqlServerAuditingPolicy: SQL
Set-AzureRmSqlServerBackupLongTermRetentionVault: SQL
Set-AzureRmSqlServerDisasterRecoveryConfiguration: SQL
Set-AzureRmSqlServerFirewallRule: SQL
Set-AzureRmSqlServerRecommendedActionState: SQL
Set-AzureRmSqlServerThreatDetectionPolicy: SQL
Set-AzureRmSqlServerTransparentDataEncryptionProtector: SQL
Start-AzureRmSqlDatabaseExecuteIndexRecommendation: SQL
Start-AzureRmSqlServerUpgrade: SQL
Stop-AzureRmSqlDatabaseExecuteIndexRecommendation: SQL
Stop-AzureRmSqlServerUpgrade: SQL
Suspend-AzureRmSqlDatabase: SQL
Switch-AzureRmSqlDatabaseFailoverGroup: SQL
Use-AzureRmSqlServerAuditingPolicy: SQL
Set-AzureRmSqlServerCommunicationLink: Others
_isModulePage: true
---

# AzureRM.Sql Module
## Description
This topic displays help topics for the Azure SQL Database Cmdlets. 

## AzureRM.Sql Cmdlets
### [Get-AzureRmSqlCapability](./Get-AzureRmSqlCapability.md)
Gets SQL Database capabilities for the current subscription.


### [Get-AzureRmSqlDatabaseActivity](./Get-AzureRmSqlDatabaseActivity.md)
Gets the status of moving elastic databases.


### [Get-AzureRmSqlDatabaseAdvisor](./Get-AzureRmSqlDatabaseAdvisor.md)
Gets one or more Advisors for an Azure SQL Database.


### [Get-AzureRmSqlDatabaseAuditingPolicy](./Get-AzureRmSqlDatabaseAuditingPolicy.md)
Gets the auditing policy of a database.


### [Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy](./Get-AzureRmSqlDatabaseBackupLongTermRetentionPolicy.md)
Gets a database long term retention policy.


### [Get-AzureRmSqlDatabaseDataMaskingPolicy](./Get-AzureRmSqlDatabaseDataMaskingPolicy.md)
Gets the data masking policy for a database.


### [Get-AzureRmSqlDatabaseDataMaskingRule](./Get-AzureRmSqlDatabaseDataMaskingRule.md)
Gets the data masking rules from a database.


### [Get-AzureRmSqlDatabaseExpanded](./Get-AzureRmSqlDatabaseExpanded.md)
Gets a database and its expanded property values.


### [Get-AzureRmSqlDatabaseGeoBackupPolicy](./Get-AzureRmSqlDatabaseGeoBackupPolicy.md)
Gets a database geo backup policy.


### [Get-AzureRMSqlDatabaseGeoBackup](./Get-AzureRMSqlDatabaseGeoBackup.md)
Gets a geo-redundant backup of a database.


### [Get-AzureRmSqlDatabaseImportExportStatus](./Get-AzureRmSqlDatabaseImportExportStatus.md)
Gets the details of an import or export of an Azure SQL Database.


### [Get-AzureRmSqlDatabaseIndexRecommendations](./Get-AzureRmSqlDatabaseIndexRecommendations.md)
Gets the recommended index operations for a server or database.


### [Get-AzureRmSqlDatabaseRecommendedAction](./Get-AzureRmSqlDatabaseRecommendedAction.md)
Gets one or more recommended actions for an Azure SQL Database Advisor.


### [Get-AzureRmSqlDatabaseReplicationLink](./Get-AzureRmSqlDatabaseReplicationLink.md)
Gets the geo-replication links between an Azure SQL Database and a resource group or SQL Server.


### [Get-AzureRmSqlDatabaseRestorePoints](./Get-AzureRmSqlDatabaseRestorePoints.md)
Retrieves the distinct restore points from which a SQL Data Warehouse can be restored.


### [Get-AzureRmSqlDatabaseSecureConnectionPolicy](./Get-AzureRmSqlDatabaseSecureConnectionPolicy.md)
Gets the secure connection policy for a database.


### [Get-AzureRmSqlDatabaseThreatDetectionPolicy](./Get-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Gets the threat detection policy for a database.


### [Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity](./Get-AzureRmSqlDatabaseTransparentDataEncryptionActivity.md)
Gets the progress of a TDE scan of a database.


### [Get-AzureRmSqlDatabaseTransparentDataEncryption](./Get-AzureRmSqlDatabaseTransparentDataEncryption.md)
Gets the TDE state for a database.


### [Get-AzureRmSqlDatabaseUpgradeHint](./Get-AzureRmSqlDatabaseUpgradeHint.md)
Gets pricing tier hints for a database.


### [Get-AzureRmSqlDatabase](./Get-AzureRmSqlDatabase.md)
Gets one or more databases.


### [Get-AzureRMSqlDeletedDatabaseBackup](./Get-AzureRMSqlDeletedDatabaseBackup.md)
Gets a deleted database that you can restore.


### [Get-AzureRmSqlElasticPoolActivity](./Get-AzureRmSqlElasticPoolActivity.md)
Gets the status of operations on an elastic pool.


### [Get-AzureRmSqlElasticPoolAdvisor](./Get-AzureRmSqlElasticPoolAdvisor.md)
Gets one or more Advisors for an Azure SQL Elastic Pool.


### [Get-AzureRmSqlElasticPoolDatabase](./Get-AzureRmSqlElasticPoolDatabase.md)
Gets elastic databases in an elastic pool and their property values.


### [Get-AzureRmSqlElasticPoolRecommendation](./Get-AzureRmSqlElasticPoolRecommendation.md)
Gets elastic pool recommendations.


### [Get-AzureRmSqlElasticPoolRecommendedAction](./Get-AzureRmSqlElasticPoolRecommendedAction.md)
Gets one or more recommended actions for an Azure SQL Elastic Pool Advisor.


### [Get-AzureRmSqlElasticPool](./Get-AzureRmSqlElasticPool.md)
Gets elastic pools and their property values in an Azure SQL Database.


### [Get-AzureRmSqlServerActiveDirectoryAdministrator](./Get-AzureRmSqlServerActiveDirectoryAdministrator.md)
Gets information about an Azure AD administrator for SQL Server.


### [Get-AzureRmSqlServerAdvisor](./Get-AzureRmSqlServerAdvisor.md)
Gets one or more Advisors for an Azure SQL Server.


### [Get-AzureRmSqlServerAuditingPolicy](./Get-AzureRmSqlServerAuditingPolicy.md)
Gets the auditing policy of a SQL server.


### [Get-AzureRmSqlServerBackupLongTermRetentionVault](./Get-AzureRmSqlServerBackupLongTermRetentionVault.md)
Gets a server long term retention vault.


### [Get-AzureRmSqlServerCommunicationLink](./Get-AzureRmSqlServerCommunicationLink.md)
Gets communication links for elastic database transactions between database servers.


### [Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity](./Get-AzureRmSqlServerDisasterRecoveryConfigurationActivity.md)
Gets activity for a database server system recovery configuration.


### [Get-AzureRmSqlServerDisasterRecoveryConfiguration](./Get-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Gets a database server system recovery configuration.


### [Get-AzureRmSqlServerFirewallRule](./Get-AzureRmSqlServerFirewallRule.md)
Gets firewall rules for a SQL Database server.


### [Get-AzureRmSqlServerRecommendedAction](./Get-AzureRmSqlServerRecommendedAction.md)
Gets one or more recommended actions for an Azure SQL Server Advisor.


### [Get-AzureRmSqlServerServiceObjective](./Get-AzureRmSqlServerServiceObjective.md)
Gets service objectives for an Azure SQL Database server.


### [Get-AzureRmSqlServerThreatDetectionPolicy](./Get-AzureRmSqlServerThreatDetectionPolicy.md)
Gets the threat detection policy for a server.


### [Get-AzureRmSqlServerUpgradeHint](./Get-AzureRmSqlServerUpgradeHint.md)
Gets pricing tier hints for upgrading an Azure SQL Database server.


### [Get-AzureRmSqlServerUpgrade](./Get-AzureRmSqlServerUpgrade.md)
Gets the status of an Azure SQL Database server upgrade.


### [Get-AzureRmSqlServer](./Get-AzureRmSqlServer.md)
Returns information about SQL Database servers.


### [New-AzureRmSqlDatabaseCopy](./New-AzureRmSqlDatabaseCopy.md)
Creates a copy of a SQL Database that uses the snapshot at the current time.


### [New-AzureRmSqlDatabaseDataMaskingRule](./New-AzureRmSqlDatabaseDataMaskingRule.md)
Creates a data masking rule for a database.


### [New-AzureRmSqlDatabaseExport](./New-AzureRmSqlDatabaseExport.md)
Exports an Azure SQL Database as a .bacpac file to a storage account.


### [New-AzureRmSqlDatabaseImport](./New-AzureRmSqlDatabaseImport.md)
Imports a .bacpac file and create a new database on the server.


### [New-AzureRmSqlDatabaseSecondary](./New-AzureRmSqlDatabaseSecondary.md)
Creates a secondary database for an existing database and starts data replication.


### [New-AzureRmSqlDatabase](./New-AzureRmSqlDatabase.md)
Creates a database or an elastic database.


### [New-AzureRmSqlElasticPool](./New-AzureRmSqlElasticPool.md)
Creates an elastic database pool for a SQL Database.


### [New-AzureRmSqlServerCommunicationLink](./New-AzureRmSqlServerCommunicationLink.md)
Creates a communication link for elastic database transactions between two SQL Database servers.


### [New-AzureRmSqlServerDisasterRecoveryConfiguration](./New-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Creates a database server system recovery configuration.


### [New-AzureRmSqlServerFirewallRule](./New-AzureRmSqlServerFirewallRule.md)
Creates a firewall rule for a SQL Database server.


### [New-AzureRmSqlServer](./New-AzureRmSqlServer.md)
Creates a SQL Database server.


### [Remove-AzureRmSqlDatabaseAuditing](./Remove-AzureRmSqlDatabaseAuditing.md)
Removes the auditing of a database.


### [Remove-AzureRmSqlDatabaseDataMaskingRule](./Remove-AzureRmSqlDatabaseDataMaskingRule.md)
Removes a data masking rule from a database.


### [Remove-AzureRmSqlDatabaseSecondary](./Remove-AzureRmSqlDatabaseSecondary.md)
Terminates data replication between a SQL Database and the specified secondary database.


### [Remove-AzureRmSqlDatabaseThreatDetectionPolicy](./Remove-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Removes the threat detection policy from a database.


### [Remove-AzureRmSqlDatabase](./Remove-AzureRmSqlDatabase.md)
Removes an Azure SQL database.


### [Remove-AzureRmSqlElasticPool](./Remove-AzureRmSqlElasticPool.md)
Deletes an elastic database pool.


### [Remove-AzureRmSqlServerActiveDirectoryAdministrator](./Remove-AzureRmSqlServerActiveDirectoryAdministrator.md)
Removes an Azure AD administrator for SQL Server.


### [Remove-AzureRmSqlServerAuditing](./Remove-AzureRmSqlServerAuditing.md)
Removes the auditing of a SQL server.


### [Remove-AzureRmSqlServerCommunicationLink](./Remove-AzureRmSqlServerCommunicationLink.md)
Deletes a communication link for elastic database transactions between two servers.


### [Remove-AzureRmSqlServerDisasterRecoveryConfiguration](./Remove-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Removes a SQL database server system recovery configuration.


### [Remove-AzureRmSqlServerFirewallRule](./Remove-AzureRmSqlServerFirewallRule.md)
Deletes a firewall rule from a SQL Database server.


### [Remove-AzureRmSqlDatabaseThreatDetectionPolicy](./Remove-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Removes the threat detection policy from a database.


### [Remove-AzureRmSqlServer](./Remove-AzureRmSqlServer.md)
Removes an Azure SQL Database server.


### [Restore-AzureRmSqlDatabase](./Restore-AzureRmSqlDatabase.md)
Restores a SQL database.


### [Resume-AzureRmSqlDatabase](./Resume-AzureRmSqlDatabase.md)
Resumes a SQL Data Warehouse database.


### [Set-AzureRmSqlDatabaseAdvisorAutoExecuteStatus](./Set-AzureRmSqlDatabaseAdvisorAutoExecuteStatus.md)
Modifies auto execute status of an Azure SQL Database Advisor.


### [Set-AzureRmSqlDatabaseAuditingPolicy](./Set-AzureRmSqlDatabaseAuditingPolicy.md)
Sets the auditing policy for a database.


### [Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy](./Set-AzureRmSqlDatabaseBackupLongTermRetentionPolicy.md)
Sets a server long term retention policy.


### [Set-AzureRmSqlDatabaseDataMaskingPolicy](./Set-AzureRmSqlDatabaseDataMaskingPolicy.md)
Sets data masking for a database.


### [Set-AzureRmSqlDatabaseDataMaskingRule](./Set-AzureRmSqlDatabaseDataMaskingRule.md)
Sets the properties of a data masking rule for a database.


### [Set-AzureRmSqlDatabaseGeoBackupPolicy](./Set-AzureRmSqlDatabaseGeoBackupPolicy.md)
Sets a database geo backup policy.


### [Set-AzureRmSqlDatabaseRecommendedActionState](./Set-AzureRmSqlDatabaseRecommendedActionState.md)
Updates the state of an Azure SQL Database recommended action.


### [Set-AzureRmSqlDatabaseSecondary](./Set-AzureRmSqlDatabaseSecondary.md)
Switches a secondary database to be primary in order to initiate failover.


### [Set-AzureRmSqlDatabaseThreatDetectionPolicy](./Set-AzureRmSqlDatabaseThreatDetectionPolicy.md)
Sets a threat detection policy on a database.


### [Set-AzureRmSqlDatabaseTransparentDataEncryption](./Set-AzureRmSqlDatabaseTransparentDataEncryption.md)
Modifies TDE property for a database.


### [Set-AzureRmSqlDatabase](./Set-AzureRmSqlDatabase.md)
Sets properties for a database, or moves an existing database into an elastic pool.


### [Set-AzureRmSqlElasticPoolAdvisorAutoExecuteStatus](./Set-AzureRmSqlElasticPoolAdvisorAutoExecuteStatus.md)
Updates auto execute status of an Azure SQL Elastic Pool Advisor.


### [Set-AzureRmSqlElasticPoolRecommendedActionState](./Set-AzureRmSqlElasticPoolRecommendedActionState.md)
Updates the state of an Azure SQL Elastic Pool recommended action.


### [Set-AzureRmSqlElasticPool](./Set-AzureRmSqlElasticPool.md)
Modifies properties of an elastic database pool in a SQL Database.


### [Set-AzureRmSqlServerActiveDirectoryAdministrator](./Set-AzureRmSqlServerActiveDirectoryAdministrator.md)
Provisions an Azure AD administrator for SQL Server.


### [Set-AzureRmSqlServerAdvisorAutoExecuteStatus](./Set-AzureRmSqlServerAdvisorAutoExecuteStatus.md)
Updates the auto execute status of an Azure SQL Server Advisor.


### [Set-AzureRmSqlServerAuditingPolicy](./Set-AzureRmSqlServerAuditingPolicy.md)
Changes the auditing policy of a SQL Database server.


### [Set-AzureRmSqlServerBackupLongTermRetentionVault](./Set-AzureRmSqlServerBackupLongTermRetentionVault.md)
Sets a server long term retention vault.


### [Set-AzureRmSqlServerDisasterRecoveryConfiguration](./Set-AzureRmSqlServerDisasterRecoveryConfiguration.md)
Modifies a database server recovery configuration.


### [Set-AzureRmSqlServerFirewallRule](./Set-AzureRmSqlServerFirewallRule.md)
Modifies a firewall rule in Azure SQL Database server.


### [Set-AzureRmSqlServerRecommendedActionState](./Set-AzureRmSqlServerRecommendedActionState.md)
Updates the state of an Azure SQL Server recommended action.


### [Set-AzureRmSqlServerThreatDetectionPolicy](./Set-AzureRmSqlServerThreatDetectionPolicy.md)
Sets a threat detection policy on a server.


### [Set-AzureRmSqlServer](./Set-AzureRmSqlServer.md)
Modifies properties of a SQL Database server.


### [Start-AzureRmSqlDatabaseExecuteIndexRecommendation](./Start-AzureRmSqlDatabaseExecuteIndexRecommendation.md)
Starts the workflow that runs a recommended index operation.


### [Start-AzureRmSqlServerUpgrade](./Start-AzureRmSqlServerUpgrade.md)
Starts the upgrade of a SQL Database server.


### [Stop-AzureRmSqlDatabaseExecuteIndexRecommendation](./Stop-AzureRmSqlDatabaseExecuteIndexRecommendation.md)
Stops the workflow that runs a recommended index operation.


### [Stop-AzureRmSqlServerUpgrade](./Stop-AzureRmSqlServerUpgrade.md)
Stops the upgrade of a SQL Database server.


### [Suspend-AzureRmSqlDatabase](./Suspend-AzureRmSqlDatabase.md)
Suspends a SQL Data Warehouse database.


### [Use-AzureRmSqlServerAuditingPolicy](./Use-AzureRmSqlServerAuditingPolicy.md)
Specifies that a database uses the auditing policy of its host server.



